layout bugfix

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -202,7 +202,7 @@
  */
 
 	div.sidebar {
-		margin-top: 36px;
+		margin-top: 66px;
 	}
 
 	ul.bookmarks {
